# sigil

./: .gitignore  CONTEXT.md  Makefile  README.md  pyproject.toml
.sigil/: config.toml  samples.jsonl
.sigil/specs/myspec/: spec.json
examples/: README.md  basic_example.py  basic_usage.py
examples/adder_opt/: README.md  benchmark.py  requirements.txt
examples/adder_opt/.sigil/: adder_opt.sigil.yaml  adder_performance.eval.yaml
examples/adder_opt/adder_opt/: __init__.py  addition.py
examples/adder_opt/scripts/: setup.sh
examples/frontend_counter/: README.md  package.json  tsconfig.json
examples/frontend_counter/.sigil/: counter_eval.eval.yaml  frontend_counter.sigil.yaml
examples/frontend_counter/scripts/: run_eval.sh  setup.sh
examples/frontend_counter/src/: App.tsx  eval.ts  state.ts
examples/json_validator/: README.md  run_eval.py
examples/json_validator/.sigil/: json_validation.eval.yaml  json_validator.sigil.yaml
examples/json_validator/fixtures/: invalid.json  valid.json
examples/json_validator/validator/: __init__.py  rules.py
examples/markdown_formatter/: README.md  expected_output.md  run_eval.py  sample_input.md
examples/markdown_formatter/.sigil/: markdown_eval.eval.yaml  markdown_formatter.sigil.yaml
examples/markdown_formatter/md_formatter/: __init__.py  formatting.py
examples/matrix_mul_cpp/: README.md
examples/matrix_mul_cpp/.sigil/: matrix_benchmark.eval.yaml  matrix_mul_cpp.sigil.yaml
examples/matrix_mul_cpp/include/: matrix.hpp
examples/matrix_mul_cpp/scripts/: run_eval.sh  setup.sh
examples/matrix_mul_cpp/src/: benchmark.cpp  matrix.cpp
scripts/: uv-bootstrap.sh
sigil/: backend.py  cli.py  config.py  evals.py  llm.py  optimization.py  patches.py  spec.py  utils.py  workspace.py
sigil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sigil/: __init__.py  cli.py  core.py  optimizers.py  workspace.py
src/sigil/core/: __init__.py  config.py  (+2 more)
tests/: test_cli.py  test_optimization.py
tests/symbolic_regression/: README.md  target_function.py  test_correctness.py
(+30 files in other folders)
