[project]
name = "sigil"
version = "0.1.0"
description = "A framework for auto-improving code through LLM-guided optimization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.11.7",
    "toml>=0.10.2",
]

[project.scripts]
sigil = "sigil.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
]
