[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil"
version = "0.1.0"
description = "Sigil: an open specification for LLM-guided code optimization"
authors = [{ name = "Sigil Team" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.5",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
]

[project.scripts]
sigil = "sigil.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil*"]
