[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil"
version = "0.1.0"
description = "Sigil: an open specification for LLM-guided code optimization"
authors = [{ name = "Sigil Team" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.5",
  "httpx>=0.27",
  "rich>=13.0.0",
  "textual>=0.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
]

[project.scripts]
sigil = "sigil.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_cli_date_format = "%H:%M:%S"
